@@ -3,7 +3,7 @@
    ==  Version 2.0, in this case for the Apache XmlBeans distribution.    ==
    =========================================================================
 
-   This product includes software developed by
+   This product includes software developed at
    The Apache Software Foundation (http://www.apache.org/).
 
    Portions of this software were originally based on the following:
@@ -22,8 +22,3 @@
     - resolver.jar from Apache Xml Commons project,
       Copyright (c) 2001-2003 Apache Software Foundation
 
-    - Piccolo XML Parser for Java from http://piccolo.sourceforge.net/,
-      Copyright 2002 Yuval Oren under the terms of the Apache Software License 2.0
-
-    - JSR-173 Streaming API for XML from http://sourceforge.net/projects/xmlpullparser/,
-      Copyright 2005 BEA under the terms of the Apache Software License 2.0
